tests/error/modifier_errors/captured_classical_modified_multiple.err
Error: Variable assigned in modifier block (at $FILE:13:11)
   | 
11 |             x += 1
12 |             y = 2
13 |     return x + y
   |            ^ Cannot use `x` because it was assigned inside a modifier
   |              block

Note:
   | 
10 |         with power(3):
11 |             x += 1
   |             ------ `x` assigned here

Help: Assignments inside modifier blocks are not reflected outside the block

Guppy compilation failed due to 1 previous error
